--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 2rem 3rem;
+    padding: 1rem 2rem;
 }
 
 .movie-app h1 {
@@ -30,12 +30,6 @@ body {
     width: fit-content;
 }
 
-@media screen and (min-width: 768px) {
-    .movie-app h1 {
-        font-size: 4rem;
-    }
-}
-
 .search-bar {
     display: flex;
     align-items: center;
@@ -43,8 +37,8 @@ body {
     background: #121212;
     border-radius: 24px;
     box-shadow: 0 .5px 1px #444;
-    margin: 3rem 0 2rem;
-    padding: 1rem 2rem;
+    margin: 2rem 0 1rem;
+    padding: 1rem;
     width: 70%;
 }
 
@@ -62,30 +56,10 @@ body {
     cursor: pointer;
 }
 
-@media screen and (min-width: 768px) {
-    .search-bar {
-        width: 60%;
-    }
-
-    .search-bar input {
-        font-size: 1.1rem;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .search-bar {
-        width: 50%;
-    }
-
-    .search-bar input {
-        font-size: 1.2rem;
-    }
-}
-
 .movie-container {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     flex-wrap: wrap;
     padding: 1rem 0;
     width: 100%;
@@ -95,12 +69,12 @@ body {
     border: none;
     border-radius: 10px;
     box-shadow: 0 0 2px rgba(255, 255, 255, .5);
-    height: 460px;
     margin: 1rem;
     overflow: hidden;
     position: relative;
     transition: all .3s;
-    width: 310px;
+    aspect-ratio: 1 / 1.5;
+    width: 260px;
 }
 
 .movie:hover {
@@ -140,19 +114,72 @@ body {
     right: 0;
     background-color: rgba(91, 91, 91, .9);
     font-family: Raleway, sans-serif;
+    font-size: 14px;
     color: #c77014;
-    padding: 1rem;
+    padding: .6rem;
     z-index: 9999;
 }
 
 .movie div:nth-of-type(3) span {
     color: #aeaeae;
+    font-size: .8rem;
     font-weight: 600;
     text-transform: uppercase;
 }
 
 .movie:hover div:nth-of-type(3) {
     background-color: rgba(91, 91, 91, .5);
+}
+
+@media screen and (min-width:760px) {
+    .movie-app {
+        padding: 2rem 3rem;
+    }
+
+    .movie-app h1 {
+        font-size: 4rem;
+    }
+
+    .search-bar {
+        margin: 3rem 0 2rem;
+        padding: 1rem 2rem;
+        width: 60%;
+    }
+
+    .search-bar input {
+        font-size: 1.1rem;
+    }
+
+    .movie-container {
+        justify-content: flex-start;
+    }
+
+    .movie {
+        width: 280px;
+    }
+
+    .movie div:nth-of-type(3) {
+        font-size: 18.7px;
+        padding: 1rem
+    }
+    
+    .movie div:nth-of-type(3) span {
+        font-size: 1rem;
+    }
+}
+
+@media screen and (min-width:1024px) {
+    .search-bar {
+        width: 50%;
+    }
+
+    .search-bar input {
+        font-size: 1.2rem;
+    }
+
+    .movie {
+        width: 300px;
+    }
 }
 
 /* .movie-container h2 {
