--- a/src/App.css
+++ b/src/App.css
@@ -22,10 +22,14 @@ body {
     padding: 1rem 2rem;
 }
 
-.movie-app h1 {
+.movie-app h1 a {
     background: linear-gradient(180deg, rgba(182,26,56,1), rgba(235,209,151,0));
     background-clip: text;
     color: transparent;
+    text-decoration: none;
+}
+
+.movie-app h1{
     font-size: 3rem;
     width: fit-content;
 }
